--- a/build.yaml
+++ b/build.yaml
@@ -23,7 +23,7 @@ include:
     shield: sofle_left
   - board: nice_nano_v2
     shield: sofle_right
-  - board: nice_nano_v1
+  - board: nice_nano
     shield: kyria_left
-  - board: nice_nano_v1
+  - board: nice_nano
     shield: kyria_right
