--- a/build.yaml
+++ b/build.yaml
@@ -29,3 +29,5 @@ include:
     shield: kyria_right
   - board: nice_nano
     shield: settings_reset
+  - board: nice_nano_v2
+    shield: settings_reset
