--- a/config/kyria.conf
+++ b/config/kyria.conf
@@ -8,4 +8,5 @@
 # Uncomment the following lines to enable RGB underglow
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=20
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=5
+CONFIG_ZMK_KEYBOARD_NAME="Eko's kyria"
